[project]
name = "comfyui-lf"
description = "Custom nodes with a touch of extra UX ✨ History for primitives, JSON manipulation, logic switches with visual feedback, LLM chat, analytics nodes, CivitAI metadata fetching... and more!"
version = "5.1.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "openai==1.12.0", "opencv-python", "piexif", "Pillow", "requests", "torch"]

[project.urls]
Repository = "https://github.com/lucafoscili/comfyui-lf"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lucafoscili"
DisplayName = "comfyui-lf"
Icon = ""
