[project]
name = "comfyui-lf"
description = "Custom nodes with a touch of extra UX ✨ Client-side LLM chat, mid-workflow image editing, history for primitives, JSON manipulation, analytics nodes, CivitAI metadata fetching and saving, logic switches with visual feedback... and more!"
version = "5.2.1"
license = {file = "LICENSE"}
dependencies = ["numpy", "openai==1.12.0", "opencv-python", "piexif", "Pillow", "requests", "torch"]

[project.urls]
Repository = "https://github.com/lucafoscili/comfyui-lf"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lucafoscili"
DisplayName = "comfyui-lf"
Icon = ""
